--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           mdbook-version: "0.3.7"
 
-      - run: mdbook build --dest-dir ./book ./docs
+      - run: mdbook build --dest-dir ../book ./docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
