--- a/web/backend/demo/package.json
+++ b/web/backend/demo/package.json
@@ -4,6 +4,8 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.21",
+    "mongoose-plugin-autoinc": "^1.1.9"
   }
 }
